--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,19 +3,29 @@
 
 <web-app>
     <servlet>
-        <servlet-name>Diablo3Controller</servlet-name>
-        <display-name>Diablo3Controller</display-name>
+        <servlet-name>DiabloBoardController</servlet-name>
+        <display-name>DiabloBoardController</display-name>
         <description></description>
-        <servlet-class>console.common.servlet.Diablo3Controller</servlet-class>
+        <servlet-class>j20220825.servlet.DiabloBoardContoller</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>DiabloLoginController</servlet-name>
+        <display-name>DiabloLoginController</display-name>
+        <description></description>
+        <servlet-class>j20220825.servlet.DiabloLoginController</servlet-class>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>Diablo3Controller</servlet-name>
+        <servlet-name>DiabloBoardController</servlet-name>
         <url-pattern>/diablo3.do</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DiabloLoginController</servlet-name>
+        <url-pattern>/diablologin.do</url-pattern>
     </servlet-mapping>
 
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
-        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>Login.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
